--- a/angular.json
+++ b/angular.json
@@ -90,5 +90,8 @@
                 }
             }
         }
+    },
+    "cli": {
+      "analytics": "d8bbe826-7482-4ba2-b4b4-0d89091efe3a"
     }
 }
